[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/Singeltons/AudioManager.gd" type="Script" id=2]

[node name="AudioManager" type="Node"]
script = ExtResource( 2 )

[node name="sfx_hover" type="AudioStreamPlayer" parent="."]

[node name="sfx_portal" type="AudioStreamPlayer" parent="."]

[node name="sfx_jump" type="AudioStreamPlayer" parent="."]

[node name="bgm" type="AudioStreamPlayer" parent="."]
volume_db = -35.0

[node name="sfx_select" type="AudioStreamPlayer" parent="."]

[node name="bgm2" type="AudioStreamPlayer" parent="."]
